[package]
name = "more-auto-shoutouts"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
mhw_toolkit = { path = "../mhw-toolkit" }
libc = "0.2.153"
winapi = { version = "0.3.9", features = ["minwindef", "winnt"] }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
snafu = "0.8.2"
log = { version = "0.4.21", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
minhook-sys = { version = "0.1.1", optional = true }
rodio = { version = "0.17.3", optional = true }
async-trait = "0.1.79"
futures = "0.3.30"
futures-util = "0.3.30"


[features]
use_logger = ["mhw_toolkit/logger"]
hooks = ["minhook-sys"]
use_audio = ["rodio"]
