[package]
name = "more-auto-shoutouts"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
mhw_toolkit = { path = "../mhw-toolkit" }
winapi = { version = "0.3", features = ["minwindef", "winnt"] }
once_cell = "1.20"
tokio = { version = "1.40", features = ["full"] }
snafu = "0.8"
log = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
minhook-sys = { version = "0.1", optional = true }
rodio = { version = "0.19", optional = true }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"


[features]
use_logger = ["mhw_toolkit/logger"]
hooks = ["minhook-sys"]
use_audio = ["rodio"]
